# sabctools

./: .gitattributes  .gitignore  .travis.yml  CHANGES  MANIFEST.in  PKG-INFO  README  README.md  TODO  YENC_DECODE_STREAM.md  appveyor.yml  logo.ync  pyproject.toml  pytest.ini  runtest.py  setup.py  speedtest.py  subprocessww.py  test.txt  test_noheader.txt  test_noheader_n.txt  test_shot.txt
.github/workflows/: build_release.yml  ci.yml  ci_and_build_release.yml
debian/: changelog  control  rules
debian/DEBIAN/: control
doc/: yenc-draft.1.3.txt
example/: try_out_sabyenc.py
examples/: logo.ync  try_out_sabyenc.py  ydecode.py  ydecode_Decoder.py  yencode.py  yencode_Encoder.py
lib/: yenc.py
src/: __init__.py  _subprocessww.c  _yenc.c  _yenc.h  crc32.cc  crc32.h  filesystem.cc  filesystem.h  sabctools.cc  sabctools.h  sabctools.pyi  sabyenc.c  sabyenc.h  sabyenc3.c  sabyenc3.cc  sabyenc3.h  sparse.cc  sparse.h  unlocked_ssl.cc  unlocked_ssl.h  utils.cc  utils.h  yenc.cc  yenc.h
src/yencode/: common.h  crc.cc  crc.h  crc_arm.cc  crc_folding.cc  crc_folding_256.cc  decoder.cc  decoder.h  decoder_avx.cc  decoder_avx2.cc  decoder_avx2_base.h  decoder_common.h  decoder_neon.cc  decoder_neon64.cc  decoder_sse2.cc  decoder_sse_base.h  decoder_ssse3.cc  decoder_vbmi2.cc  encoder.cc  encoder.h  encoder_avx2.cc  encoder_avx_base.h  encoder_neon.cc  encoder_sse2.cc  encoder_sse_base.h  encoder_vbmi2.cc  hedley.h  platform.cc  stdint.h
test/: test.py
tests/: check_debug_pickles.py  check_pickles.py  crc_1482774847.826532  crc_1483454536.64721  crc_1483454573.695736  crc_1483454578.289347  crc_1483519223.429806  crc_1483542417.732329  quick_test.py  regular_1483370951.045506  regular_1483370951.942672  regular_1483370952.091026  regular_1483370952.69578  regular_1483370952.816001  requirements.txt  simple_text.py  speed_compare.py  speedtest.py  test.py  test2.p  test_badcrc.txt  test_crc32.py  test_decoder.py  test_encoder.py  test_filesystem.py  test_inputvalidation.py  test_openssl_linked.py  test_pickled_data.pck  test_sparse.py  test_unlocked_ssl.py  test_utils.py  test_yenc_splits.txt  testsupport.py
tests/debugfiles/: crc_7AxpgNzfHdDzUWnBnFfz_5o22@JBinUp.local  crc_BCQ3P6IRkTGO0pVzU9QL1_5o22@JBinUp.local
tests/uufiles/: logo_full.nntp
tests/yencfiles/: capabilities.yenc  crc_1.pickle  crc_1.yenc  crc_10.yenc  crc_11.pickle  crc_11.yenc  crc_1485266801.08  crc_1485266861.43  crc_1485267447.62  crc_1485267596.51  crc_1485268062.82  crc_1485268203.06  crc_1485269041.69  crc_1485269517.52  crc_1485269689.29  crc_1485269752.39  crc_1485270313.16  crc_1485270667.79  crc_1485270694.38  crc_1485270919.57  crc_1485270952.33  crc_1491378708.6  crc_2.yenc  crc_2023.yenc  crc_2qDcLdjDym75k6PkUdMz_2o22@JBinUp.local  crc_3.yenc  crc_4.yenc  crc_5.yenc  crc_5nCweVA4aKnlBTG1s0K8_4o22@JBinUp.local  crc_6.pickle  crc_6.yenc  crc_7.pickle  crc_7.yenc  crc_8.pickle  crc_8.yenc  crc_9.pickle  crc_9.yenc  crc_KnHUroIRrzDYAHcb6cy3_3o22@JBinUp.local  (+47 more)
travis/: build-wheels.sh
yencode/: common.h  crc.cc  decoder.cc  decoder.h  decoder_avx2_base.h  decoder_neon.cc  encoder.cc  encoder_avx.cc  encoder_avx_base.h  encoder_common.h  encoder_ssse3.cc  platform.cc  stdint.h
(+2 files in other folders)
